--- a/vision/finetuning/SmolVLM2_Video_FT.ipynb
+++ b/vision/finetuning/SmolVLM2_Video_FT.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/merveenoyan/smollm/blob/main/vision/finetuning/SmolVLM2_Video_FT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/liuhuanjim013/smollm/blob/main/vision/finetuning/SmolVLM2_Video_FT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -22,27 +22,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WIhA1lQ7j0kw",
-        "outputId": "928f2f4e-6cd8-452b-d621-605550fdd33c"
+        "outputId": "0a1fc159-21b2-4695-ed14-a309506e934e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m163.5/163.5 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for docopt (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement pyav (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for pyav\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
           ]
         }
       ],
       "source": [
-        "!pip install -q accelerate datasets peft bitsandbytes tensorboard pyav num2words"
+        "!pip install -q accelerate datasets peft bitsandbytes tensorboard av num2words"
       ]
     },
     {
